# keeps

./: .gitignore  README.md  f15-active-window-research.md  f21-copy-buffers-research.md  f23-alt-tab-research.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
packaging/: build-appimage.sh  keeps.desktop
packaging/aur/: PKGBUILD
packaging/aur/keeps-git/: PKGBUILD
src/keeps/: app.py  autostart.py  clip_archive.py  clipboard.py  compare.py  config.py  copy_buffers.py  desktop_apps.py  desktop_entry.py  diagnostics.py  i18n.py  multi_paste.py  paste.py  popup_keymap.py  search.py  store.py  text_encoding.py  workbench.py
src/keeps/ai/: __init__.py  download.py  models.py  ocr.py  ranking.py  runtime.py  text_embed.py
src/keeps/capture/: base.py  wayland.py  x11.py
src/keeps/hotkey/: base.py  buffers.py  clip_registry.py  clips.py  kglobalaccel.py  portal.py  portal_format.py  x11.py
src/keeps/ui/: color_swatch.py  delegate.py  expand_dialog.py  format.py  geometry.py  (+8 more)
tests/: test_ai_download.py  test_ai_models.py  test_ai_ocr.py  test_ai_ranking.py  test_ai_runtime.py  test_ai_text_embed.py  test_autostart.py  test_capture.py  test_clip_archive.py  test_clip_hotkeys.py  test_color_swatch.py  test_compare.py  test_config.py  test_copy_buffer_capture.py  test_delegate.py  test_desktop_apps.py  test_desktop_entry.py  test_diagnostics.py  test_format.py  test_geometry.py  test_hotkey.py  test_hotkey_portal.py  test_i18n.py  test_multi_paste.py  test_paste.py  test_popup_keymap.py  test_search.py  test_store.py  test_text_transform.py  test_workbench.py
