[project]
name = "keeps"
version = "0.1.0"
description = "Ditto-inspired clipboard manager for Linux (Wayland-first, KDE-first)"
readme = "README.md"
license = { text = "GPL-3.0-or-later" }
requires-python = ">=3.12"
dependencies = [
    "PySide6>=6.7",
]

[project.optional-dependencies]
ai = [
    "onnxruntime",
    "tokenizers",
    "numpy",
]

[project.scripts]
keeps = "keeps.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/keeps"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
]
